--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style_1.css">
 </head>
 
 <body>
@@ -38,32 +38,13 @@
 
     <div class="wrapper">
         <div class="cols cols0">
-            <span class="topline">Hello</span>
-            <h1>I'm <span class="multiText"></span></h1>
+            <h1><span class="headline">About Me</span></h1>
             <p> that wants to die lol</p>
-            <div class="btns">
-                <button>My CV</button>
-                <button>Contact me</button>
-            </div>
+            
         </div>
-        <div class="cols cols1">
-            <div class="imgbox">
-                <img src="./splash.png" id="splash">
-                <img src="./leo2.png">
-            </div>
-        </div>
+        
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script>
-    var typingEffect = new Typed(".multiText", {
-        strings : [" a Student", " an Artist"],
-        loop : true,
-        typeSpeed : 120,
-        backSpeed : 100,
-        backDelay : 1700,
-    })
-</script>
 </body>
 
 </html>
