--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
         <div class="cols cols1">
             <div class="imgbox">
-                <img src="./splash.png" id="splash">
-                <img src="./leo2.png">
+                <img src="./Pics/splash.png" id="splash">
+                <img src="./Pics/leo2.png">
             </div>
         </div>
     </div>
