--- a/blog.html
+++ b/blog.html
@@ -61,12 +61,22 @@
                     We had fun working even when it rained a little. 
                     I was working as an audio tech, and had a lot of fun producing a movie.
                     <img src="./Pics/bts_1.jpg" height="450px"></p><br>
+                <p><b> </b><br><br>
+                  
+                    <img src="./Pics/bts_1.jpg" height="450px"></p><br>
 
             </div>
 
         </div>
 
     </div>
+    <footer> 
+        <p>Laura Kupferschmid</p><br>
+        <div class="links">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
