--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,14 @@
     
     </div>
 </div>
+<footer> 
+    <p>Laura Kupferschmid</p><br>
+    <div class="links">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+</footer>
+
 </body>
 
 </html>
