--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <a href="./portfolio.html">Portfolio</a>
                     <i class="fa fa-caret-down"></i>
                     <div class="dropdown-content">
-                        <a href="#">3D</a>
-                        <a href="#">Film</a>
-                        <a href="#">Photographie</a>
+                        <a href="./threed.html">3D</a>
+                        <a href="./films.html">Film</a>
+                        <a href="./photos.html">Photographie</a>
                     </div>
                 </div>
             </li>
