--- a/photos.html
+++ b/photos.html
@@ -68,7 +68,7 @@
     </div>
     <footer> 
         <p>Laura Kupferschmid</p><br>
-        <div class="links">
+        <div class="links_footer">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
