--- a/aboutMe.html
+++ b/aboutMe.html
@@ -75,7 +75,7 @@
 
     <footer>
         <p>Laura Kupferschmid</p><br>
-        <div class="links">
+        <div class="links_footer">
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
