--- a/blog.html
+++ b/blog.html
@@ -43,23 +43,17 @@
                 <h1> <span class="headline">My Blog</span></h1> <br><br>
                 <p> <b>30.06.2023 - 3D Update </b><br><br>
 
-                    Today i had to start rendering our 3D Animation Projekt and so 
-                    far it is going great! My Pc is working really hard on these scenes, 
-                    but here is a little sneak peak for you. <br>
-                    <img src="./Pics/0605.png" height="450px">
+                    Today i had to start rendering our 3D Animation Projekt and so far it is going great! My Pc is working really hard on these scenes, but here is a little sneak peak for you. <br>
+                    <img src="./Pics/0605.png" width="600px">
                 </p> <br>
                 <p> <b>09.06.2023 BTS Day 2</b> <br><br>
                   
-                    Today was the second day of making our Shortfilm. 
-                    We wrapped up our Student Project in time without any issues!
-                    I was again working as an aduio tech.
+                    Today was the second day of making our Shortfilm. We wrapped up our Student Project in time without any issues! I was again working as an aduio tech. <br>
                     <img src="./Pics/bts_2.jpg" height="450px">
                 </p><br>
                 <p><b>08.06.2023 BTS of our Movie </b><br><br>
                   
-                    Today was the first day of making our Shortfilm. 
-                    We had fun working even when it rained a little. 
-                    I was working as an audio tech, and had a lot of fun producing a movie.
+                    Today was the first day of making our Shortfilm. We had fun working even when it rained a little. I was working as an audio tech, and had a lot of fun producing a movie. <br>
                     <img src="./Pics/bts_1.jpg" height="450px"></p><br>
 
                 <!-- <p><b> headline </b><br><br>
