--- a/films.html
+++ b/films.html
@@ -43,11 +43,8 @@
                 <h1> <span class="headline">Film Projects</span></h1> <br><br>
                 <p> <b>The Silent Observer</b><br><br>
 
-                    This is my first Film Project made with a group of other students for one of ours courses.<br>
-
-                    We picked thriller as a genre and decided to make ashort film about stalking.
-                    If your curious check it out on youtube 
-                    <a href="https://youtu.be/h87CRZiFbnA"><img src="./Pics/0605.png" height="450px"></a>
+                    This is my first Film Project made with a group of other students for one of ours courses. We picked thriller as a genre and decided to make ashort film about stalking. If your curious check it out on youtube. <br>
+                    <a href="https://youtu.be/h87CRZiFbnA"><img src="./Pics/0605.png" width="600px"></a>
                 </p> <br>
                 
 
