--- a/aboutMe.html
+++ b/aboutMe.html
@@ -42,14 +42,9 @@
 
                 <p> <b>Hi hi</b><br><br>
 
-                    I am Laura Kupferschmid, an Artist and Creative mind, 
-                    currently studying Media and Design at Furtwangen University.
-                    I love to try all kinds of Artsy work. From Movie Produktion, 
-                    to Photographie or 3D- Animation and Blender Modelling. I am 
-                    learning and loving it all and on this website you can see all 
-                    of my current Projects and works.
+                    I am Laura Kupferschmid, an Artist and Creative mind, currently studying Media and Design at Furtwangen University. I love to try all kinds of Artsy work. From Movie Produktion, to Photographie or 3D- Animation and Blender Modelling. I am learning and loving it all and on this website you can see all of my current Projects and works.
 
-                    <img src="./Pics/0605.png" height="450px">
+                    <img src="./Pics/0605.png" width="600px">
                 </p> <br>
 
                 <p> <b>My Skills</b><br><br>
@@ -65,7 +60,7 @@
                     <b>Located:</b> Villingen <br>
                     <b>Ocupation</b> Furtwangen University <br>
 
-                    <img src="./Pics/0605.png" height="450px">
+                    <img src="./Pics/0605.png" width="600px">
                 </p> <br>
 
             </div>
