--- a/portfolio.html
+++ b/portfolio.html
@@ -43,19 +43,19 @@
             <div class="film"><p> <b>My Shortfilm</b><br><br>
                 
                 In this Category you can find all my filming related work.<br>
-                <a href="./films.html"><img src="./Pics/0605.png" height="300px"></a>
+                <a href="./films.html"><img src="./Pics/0605.png" width="600px"></a>
             </p> </div><br>
 
             <div class="threeD"><p> <b>My 3D Work</b><br><br>
 
                 Here you can find all my diffrent 3D works  <br>
-                <a href="./threed.html"><img src="./Pics/0605.png" height="300px"></a>
+                <a href="./threed.html"><img src="./Pics/0605.png" width="600px"></a>
             </p> </div><br>
 
             <div class="Photographie"><p> <b>My Photographies</b><br><br>
 
                 Here is a look into my Photographie <br>
-                <a href="./photos.html"><img src="./Pics/0605.png" height="300px"></a>
+                <a href="./photos.html"><img src="./Pics/0605.png" width="600px"></a>
             </p></div> <br>
            
         </div>
