--- a/threed.html
+++ b/threed.html
@@ -43,11 +43,8 @@
                 <h1> <span class="headline">My 3D Works</span></h1> <br><br>
                 <p> <b>Ying and Yang</b><br><br>
 
-                    Here you can find my first 3D Animation made with Blender.
-                    This was a little group Project for one of our courses and we wanted to do a fictional game trailer.
-                    If you wanna take a look at it check it out with clicking on the pics down below.
-                    <br>
-                    <a href=""><img src="./Pics/0605.png" height="450px"></a>
+                    Here you can find my first 3D Animation made with Blender. This was a little group Project for one of our courses and we wanted to do a fictional game trailer. If you wanna take a look at it check it out with clicking on the pics down below.<br>
+                    <a href=""><img src="./Pics/0605.png" width="600px"></a>
                 </p> <br>
 
                 <!-- <p><b> headline </b><br><br>
