--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,7 @@
             </ul>
     
             <div class="links">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/laura-kupferschmid-361468283/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
     
@@ -69,7 +69,7 @@
     <footer> 
         <p>Laura Kupferschmid</p><br>
         <div class="links_footer">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/laura-kupferschmid-361468283/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
