--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         </ul>
 
         <div class="links">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/laura-kupferschmid-361468283/"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
 
@@ -65,7 +65,7 @@
 <footer> 
     <p>Laura Kupferschmid</p><br>
     <div class="links_footer">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/laura-kupferschmid-361468283/"><i class="fab fa-linkedin"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
     </div>
 </footer>
