--- a/photos.html
+++ b/photos.html
@@ -46,7 +46,7 @@
                     In this category you can find some of my nature photographie <br>
                     <img src="./Pics/nature1.jpg" width="20%">
                     <img src="./Pics/nature2.jpg" width="20%">
-                    <img src="./Pics/nature4.JPG"  height="185px"> 
+                    <img src="./Pics/nature4.JPG" width="18%"> 
                     <img src="./Pics/nature5.jpg" width="20%"><br>
                     <img src="./Pics/nature3.JPG" width="40%">
                     <img src="./Pics/building1.jpg" width="40%"><br>
