--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
             <div class="film"><p> <b>My Shortfilm</b><br><br>
                 
                 In this Category you can find all my filming related work.<br>
-                <a href="./films.html"><img src="./Pics/0605.png" width="600px"></a>
+                <a href="./films.html"><img src="./Pics/film_screen.png" width="600px"></a>
             </p> </div><br>
 
             <div class="threeD"><p> <b>My 3D Work</b><br><br>
@@ -55,7 +55,7 @@
             <div class="Photographie"><p> <b>My Photographies</b><br><br>
 
                 Here is a look into my Photographie <br>
-                <a href="./photos.html"><img src="./Pics/0605.png" width="600px"></a>
+                <a href="./photos.html"><img src="./Pics/nature3.JPG" width="600px"></a>
             </p></div> <br>
            
         </div>
