--- a/films.html
+++ b/films.html
@@ -44,7 +44,7 @@
                 <p> <b>The Silent Observer</b><br><br>
 
                     This is my first Film Project made with a group of other students for one of ours courses. We picked thriller as a genre and decided to make ashort film about stalking. If your curious check it out on youtube. <br>
-                    <a href="https://youtu.be/h87CRZiFbnA"><img src="./Pics/0605.png" width="600px"></a>
+                    <a href="https://youtu.be/h87CRZiFbnA"><img src="./Pics/film_screen.png" width="600px"></a>
                 </p> <br>
                 
                 <!-- <p><b> headline </b><br><br>
