--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
         <div class="cols cols0">
             <span class="topline">Hello</span>
             <h1>I'm <span class="multiText"></span></h1>
-            <p> that wants to die lol</p>
+            <p> that would love to try all kinds of Artsy work</p>
             <div class="btns">
-                <button>My CV</button>
-                <button>Contact me</button>
+                <!-- <button>My CV</button>
+                <button>Contact me</button> -->
             </div>
         </div>
         <div class="cols cols1">
             <div class="imgbox">
                 <img src="./Pics/splash.png" id="splash">
-                <img src="./Pics/leo2.png">
+                <img src="./Pics/Bewerbung_p.png">
             </div>
         </div>
     </div>
