--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="links">
         <a href="https://www.linkedin.com/in/laura-kupferschmid-361468283/"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://instagram.com/laura__kupferschmid?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><i class="fab fa-instagram"></i></a>
         </div>
 
     </nav>
