--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="cols cols0">
             <span class="topline">Hello</span>
             <h1>I'm <span class="multiText"></span></h1>
-            <p> that would love to try all kinds of Artsy work</p>
+            <!-- <p> that would love to try all kinds of Artsy work</p> -->
             <div class="btns">
                 <!-- <button>My CV</button>
                 <button>Contact me</button> -->
